# lakesql

./: .dockerignore  .gitignore  .typos.toml  AGENTS.md  Apache-2.0.txt  Cargo.toml  LICENSE  Makefile  README.md  licenserc.toml  nfpm.yaml
.github/: actionlint.yaml
.github/actions/check/: action.yml
.github/actions/publish_binary/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: bindings.nodejs.yml  bindings.python.yml  ci.yml  cron.integration.yml  frontend.yml  pr.yml  release.yml  ttc.yml
agents/: frontend.md  integration-and-bindings.md
bindings/nodejs/: .prettierignore  Cargo.toml  README.md  build.rs  generated.js  index.d.ts  index.js  package.json  typedoc.json
bindings/nodejs/npm/darwin-arm64/: package.json
bindings/nodejs/npm/darwin-x64/: package.json
bindings/nodejs/npm/linux-arm64-gnu/: package.json
bindings/nodejs/npm/linux-arm64-musl/: package.json
bindings/nodejs/npm/linux-x64-gnu/: package.json
bindings/nodejs/npm/linux-x64-musl/: package.json
bindings/nodejs/npm/win32-arm64-msvc/: package.json
bindings/nodejs/npm/win32-x64-msvc/: package.json
bindings/nodejs/scripts/: header.js
bindings/nodejs/src/: lib.rs
bindings/nodejs/tests/: binding.js
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/package/tidbcloudlake_driver/: __init__.py  __init__.pyi
bindings/python/src/: asyncio.rs  blocking.rs  exceptions.rs  lib.rs  types.rs  utils.rs
bindings/python/tests/asyncio/steps/: binding.py
bindings/python/tests/blocking/steps/: binding.py
bindings/python/tests/cursor/steps/: binding.py
bindings/python/tests/orm/steps/: orm.py
bindings/tests/: README.md
bindings/tests/features/: binding.feature
cli/: Cargo.toml  README.md  build.rs  test.sh
cli/src/: args.rs  config.rs  display.rs  gendata.rs  helper.rs  main.rs  session.rs  sql_parser.rs  trace.rs  web.rs
cli/src/ast/: mod.rs  query_kind.rs
cli/tests/: 00-base.sql  01-put.sh  02-qid.sh  03-put-get-paths.sh
cli/tests/http/: 01-load_stdin.sh  02-load_file.sh  03-load_file_gzip.sh  04-args-database.sh  05-stream.sh  06-update.sh  08-keypair-auth.result  08-keypair-auth.sh
core/: Cargo.toml  README.md
core/src/: auth.rs  capability.rs  client.rs  client_mgr.rs  error.rs  error_code.rs  global_cookie_store.rs  lib.rs  login.rs  pages.rs  presign.rs  request.rs  response.rs  schema.rs  session.rs  settings.rs  stage.rs
core/tests/core/: main.rs  retry.rs  simple.rs  stage.rs
core/tests/core/common/: mod.rs
driver/: Cargo.toml  README.md
driver/src/: client.rs  conn.rs  flight_sql.rs  lib.rs  params.rs  placeholder.rs  rest_api.rs
driver/tests/driver/: connection.rs  load.rs  main.rs  orm.rs  select_iter.rs  select_simple.rs  session.rs  temp_table.rs
driver/tests/driver/common/: mod.rs
frontend/: empty-less.js  next.config.js  package.json
frontend/pages/: [...slug].tsx  index.tsx  notebooks.tsx
frontend/pages/perf/: [...slug].tsx
frontend/public/: index.html
frontend/src/: Layout.tsx  SQLQuery.tsx
frontend/src/components/: DsnSelector.tsx
frontend/src/context/: DsnContext.tsx
frontend/src/hooks/: useFlowAnalysisGraphConfig.tsx
frontend/src/utills/: notebookStorage.ts
install/: lakesql.sh
macros/: Cargo.toml
macros/src/: from_row.rs  lib.rs  parser.rs  serde_bend_macro.rs
scripts/: build_linux_packages.sh  bump_version.py  render_homebrew_formula.sh  verify_linux_packages.sh
sql/: Cargo.toml
sql/src/: error.rs  lib.rs  raw_rows.rs  rows.rs
sql/src/cursor_ext/: cursor_checkpoint_ext.rs  cursor_read_bytes_ext.rs  cursor_read_number_ext.rs  cursor_read_string_ext.rs  mod.rs
sql/src/value/: arrow_decoder.rs  base.rs  convert.rs  geo.rs  interval.rs  mod.rs  string_decoder.rs
sql/src/value/format/: display.rs  into_string.rs  mod.rs  result_encode.rs  to_sql_string.rs
tests/: Makefile  docker-compose.yaml
tests/nox/: noxfile.py
ttc/: Cargo.toml  README.md
ttc/src/: client.rs  server.rs
