[package]
name = "lake-driver"
description = "TiDB Cloud Lake Driver for Rust"
categories = ["database"]
keywords = ["lake", "tidbcloud", "database", "sdk"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
default = ["rustls"]

# Enable rustls for TLS support
rustls = ["lake-client/rustls"]
# Enable native-tls for TLS support
native-tls = ["lake-client/native-tls"]

flight-sql = [
    "dep:arrow-flight",
    "dep:arrow-schema",
    "dep:tonic",
    "lake-driver-core/flight-sql",
]

[dependencies]
arrow = { workspace = true }
arrow-flight = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
lake-client = { workspace = true }
lake-driver-core = { workspace = true }
lake-driver-macros = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, optional = true }

async-trait = "0.1"
jiff = { version = "0.2.10", features = ["tzdb-bundle-always"] }
csv = "1.3"
databend-common-ast = "0.2.5"
derive-visitor = { version = "0.4.0", features = ["std-types-drive"] }
glob = "0.3"
log = "0.4"
once_cell = "1.21"
percent-encoding = "2.3"
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.34", features = ["macros"] }
url = { version = "2.5", default-features = false }

[dev-dependencies]
env_logger = "0.11.8"
