[package]
name = "lake-ttc"
description = "TiDB Cloud Lake Rust Tcp Test Container"
categories = ["database"]
keywords = ["lake", "tidbcloud", "database", "test", "cttttontainer"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
lake-driver = { workspace = true }

bytes = "1"
clap = { version = "4.4", features = ["derive", "env"] }
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.34", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot",
    "full",
] }

[[bin]]
name = "ttc-server"
path = "src/server.rs"
doctest = false
test = false

[[bin]]
name = "ttc-client"
path = "src/client.rs"
doctest = false
test = false
